Fix overflow on chart svg

--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,10 @@ div {
     display: table;
 }
 
+.details svg {
+    overflow: inherit;
+}
+
 /* Left Panel
    ========================================================================== */
 .left-panel {
